# src/app/Http/Controllers/api/v1/UsersApiController.php
@@ -6,20 +6,77 @@
 
 namespace App\Http\Controllers\api\v1;
 
+use App\Http\Requests\UserIndexRequest;
+use App\Http\Requests\UserRequest;
+use App\Http\Resources\UserCollection;
 use App\Http\Resources\UserResource;
+use App\Models\User;
+use App\Repositories\UserRepository;
 use Auth;
 use Illuminate\Http\Request;
 
 class UsersApiController extends ApiController
 {
+
+    protected $userRepo;
+
+    public function __construct()
+    {
+        $this->userRepo = new UserRepository();
+    }
+
     /**
      * Display a listing of the resource.
+     * @OA\Get(
+     *     path="/users",
+     *     tags = {"Users"},
+     *     @OA\Response(
+     *          response=200,
+     *          description="Display a listing of the resource",
+     *          @OA\MediaType(mediaType="application/json")
+     *     ),
      *
-     * @return \Illuminate\Http\Response
+     *     @OA\Parameter(
+     *          name = "count",
+     *          in = "query",
+     *          description = "number of people per page",
+     *          required=false,
+     *          @OA\Schema(
+     *             type="integer"
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *          name = "page",
+     *          in = "query",
+     *          description = "page",
+     *          required=false,
+     *          @OA\Schema(
+     *             type="integer"
+     *         )
+     *     ),
+     *
+     *     @OA\Parameter(
+     *          name = "role",
+     *          in = "query",
+     *          description = "role",
+     *          required=false,
+     *          @OA\Schema(
+     *             type="string"
+     *         )
+     *     )
+     * )
      */
-    public function index()
+    public function index(UserIndexRequest $request): UserCollection
     {
-        //
+        $userRepo = $this->userRepo;
+
+        $userRepo->setRole($request->get('role'));
+
+        $perPage = $request->get("count") ? $request->get('count') : 6;
+
+        $this->recordExists($users = $userRepo->getListPaginate($perPage));
+
+        return new UserCollection($users);
     }
 
     /**
@@ -30,30 +87,97 @@ class UsersApiController extends ApiController
      */
     public function store(Request $request)
     {
-        //
+
     }
 
     /**
      * Display the specified resource.
      *
+     * @OA\Get(
+     *     path="/users/{id}",
+     *     tags = {"Users"},
+     *     @OA\Response(
+     *          response=200,
+     *          description="Display the specified resource",
+     *          @OA\MediaType(mediaType="application/json")
+     *     ),
+     *     @OA\Response(
+     *          response="404",
+     *          description="not found",
+     *          @OA\JsonContent(
+     *              type="array",
+     *              @OA\Items(ref="#/components/schemas/NotFoundRequest")
+     *          )
+     *      ),
+     *
+     *     @OA\Parameter(
+     *          name = "id",
+     *          in = "path",
+     *          description = "user id",
+     *          required=false,
+     *          @OA\Schema(
+     *             type="integer"
+     *         )
+     *     )
+     * )
      * @param  int  $id
-     * @return \Illuminate\Http\Response
+     * @return UserResource
      */
-    public function show($id)
+    public function show($id): UserResource
     {
-        //
+        $userRepo = $this->userRepo;
+        $this->recordExists($user = $userRepo->getById($id));
+
+        return new UserResource($user);
     }
 
     /**
      * Update the specified resource in storage.
      *
+     *    @OA\Patch (
+     *     path="/users/{id}",
+     *     tags = {"Users"},
+     *     @OA\Response(
+     *          response=201,
+     *          description="Update the specified resource in storage",
+     *          @OA\MediaType(mediaType="application/json")
+     *     ),
+     *     @OA\Response(
+     *          response="404",
+     *          description="not found",
+     *          @OA\JsonContent(
+     *              type="array",
+     *              @OA\Items(ref="#/components/schemas/NotFoundRequest")
+     *          )
+     *      ),
+     *
+     *     @OA\Parameter(
+     *          name = "id",
+     *          in = "path",
+     *          description = "user id",
+     *          required=false,
+     *          @OA\Schema(
+     *             type="integer"
+     *         )
+     *     )
+     * )
+     *
      * @param  \Illuminate\Http\Request  $request
      * @param  int  $id
-     * @return \Illuminate\Http\Response
+     * @return UserResource
      */
-    public function update(Request $request, $id)
+    public function update(UserRequest $request, $id): UserResource
     {
-        //
+        $userRepository = $this->userRepo;
+
+        $this->recordExists($user = User::find($id));
+        $user->fill($request->all());
+
+        $user->update();
+
+        $user->roles()->sync($request->get("roles"));
+
+        return new UserResource($user);
     }
 
     /**
@@ -70,6 +194,8 @@ class UsersApiController extends ApiController
 
     /**
      * @return UserResource
+     *
+     * Display auth user.
      *
      * @OA\Get(
      *     path="/auth/profile",
@@ -89,7 +215,8 @@ class UsersApiController extends ApiController
      *     ),
      * )
      */
-    public function authUser(){
+    public function authUser(): UserResource
+    {
         return UserResource::make(Auth::user());
     }
 }
